--- a/1.html
+++ b/1.html
@@ -34,67 +34,35 @@
 <body>
 
 	<div class="page">
-		<header class="row">
-			<div class="col">
-				<a href="/" class="pic"><img src="img/me.png" alt="Me" /></a>
-			</div>
+		<nav>
+			<a href="/">&larr; Home</a>
+		</nav>
+		<header>
 			<h1 class="col"><a href="https://www.hrblock.com" target="_blank">H&amp;R Block<i>&nearr;</i></a></h1>
 		</header>
-		<div class="row">
-			<div class="col">
-				<h5>Project</h5>
-				<h3><a href="https://www.hrblock.com/tax-offices/" target="_blank">BlockWorks<i>&nearr;</i></a></h3>
-			</div>
-			<div class="col">
-				<p>H&amp;R Block is the world&rsquo;s largest tax service provider. Working at H&amp;R Block was a great experience. I was the lead designer on their tax-pro product, BlockWorks. This product is used by the tax pros in their retail offices, a channel for a billion dollars in revenue. I worked with people that were truly passionate and cared about their customers. Because they cared, going through the discovery, research and design process was natural for them.</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col">
-				<h5>Role</h5>
-				<h3>Lead Designer</h3>
-			</div>
-			<div class="col">
-				<p>My responsibilities included <abbr>UI</abbr> design, usability testing, and research to improve the customer&rsquo;s experience by helping the tax pro deliver a great customer experience when preparing tax returns. I worked with the many product managers and engineering teams that where involved in building and maintaining the product.</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col">
-				<h3>The problem</h3>
-			</div>
-			<div class="col">
-				<p>There were a lot of business reasons and technical reasons for this project, but as the <abbr>UX</abbr> designer I had to keep in mind the tax pro. The tax pro needed a tool that would help them confidently and accurately prepare a tax return. In the retail setting this was an essential part of the experience.</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col">
-				<h3>Process</h3>
-			</div>
-			<div class="col">
-				<p>I had a lot to learn about taxes. There was a lot of expertise and knowledge inside the building. I started talking to everyone. I also did a lot of field observation. This was invaluable. Seeing tax pros use the product and interact with their clients was key to building a great product and experience. Hands down the best way to improve the experience is to watch people using your products.</p>
-			</div>
-		</div>
-		<figure>
+		<h3>About H&amp;R Block and <a href="https://www.hrblock.com/tax-offices/" target="_blank">BlockWorks<i>&nearr;</i></a></h3>
+		<p>H&amp;R Block is the world&rsquo;s largest tax service provider. Working at H&amp;R Block was a great experience. I was the lead designer on their tax-pro product, BlockWorks. This product is used by the tax pros in their retail offices, a channel for a billion dollars in revenue. I worked with people that were truly passionate and cared about their customers. Because they cared, going through the discovery, research and design process was natural for them.</p>
+		<h3>Roles &amp; Responsibilities</h3>
+		<p>My responsibilities included <abbr>UI</abbr> design, usability testing, and research to improve the customer&rsquo;s experience by helping the tax pro deliver a great customer experience when preparing tax returns. I worked with the many product managers and engineering teams that where involved in building and maintaining the product.</p>
+		<h3>The Business Problem</h3>
+		<p>There were a lot of business reasons and technical reasons for this project, but as the <abbr>UX</abbr> designer I had to keep in mind the tax pro. The tax pro needed a tool that would help them confidently and accurately prepare a tax return. In the retail setting this was an essential part of the experience.</p>
+		<h3>Process</h3>
+		<p>I had a lot to learn about taxes. There was a lot of expertise and knowledge inside the building. I started talking to everyone. I also did a lot of field observation. This was invaluable. Seeing tax pros use the product and interact with their clients was key to building a great product and experience. Hands down the best way to improve the experience is to watch people using your products.</p>
+		<figure class="research">
 			<img src="img/hrb-2.jpg" alt="Portfolio" />
 			<figcaption>Field observations.</figcaption>
 		</figure>
-		<div class="solo-col">
-			<p>A big part of the job was understanding the Tax Pro and the retail experience. The Tax Pro had to have confidence when using the product, because they had to be confident for their customers when preparing their taxes.</p>
-		</div>
-		<figure class="screen">
+		<p>A big part of the job was understanding the Tax Pro and the retail experience. The Tax Pro had to have confidence when using the product, because they had to be confident for their customers when preparing their taxes.</p>
+		<figure class="research">
 			<img src="img/hrb-6.jpg" alt="Portfolio" />
 			<figcaption>User Journeys</figcaption>
 		</figure>
-		<div class="solo-col">
-			<p>There where thousands of screens in this product and teams working on it around the world. It was impossible to design everyone screen myself. So I created &amp; and shared design principles to help product managers and engineers think about the experience and help make design decisions.</p>
-		</div>
-		<figure class="screen">
+		<p>There where thousands of screens in this product and teams working on it around the world. It was impossible to design everyone screen myself. So I created &amp; and shared design principles to help product managers and engineers think about the experience and help make design decisions.</p>
+		<figure class="research">
 			<img src="img/hrb-3-4.png" alt="Portfolio" />
 			<figcaption>Product Experience Principles</figcaption>
 		</figure>
-		<div class="solo-col">
-			<p>The final design, which was a <a href="https://www.microsoft.com/en-us/windows">Windows</a> app built in <a href="https://www.microsoft.com/silverlight/">Silverlight</a>.</p>
-		</div>
+		<p>The final design, which was a <a href="https://www.microsoft.com/en-us/windows">Windows</a> app built in <a href="https://www.microsoft.com/silverlight/">Silverlight</a>.</p>
 		<figure class="screen">
 			<img src="img/hrb-5.png" alt="Portfolio" />
 			<figcaption>That is some intense form design!</figcaption>
@@ -104,8 +72,8 @@
 			<figcaption>Client summary</figcaption>
 		</figure>
 		<nav>
-			<div class="prev"><a class="prev" href="2.html">&larr; <abbr>WGU</abbr></a> <code>:Use Case</code></div>
-			<div class="next"><code>Use Case:</code> <a class="next" href="4.html">Mavenlink &rarr;</a></div>
+			<div class="prev"><a class="prev" href="2.html">&larr; <abbr>WGU</abbr></a></div>
+			<div class="next"><a class="next" href="4.html">Mavenlink &rarr;</a></div>
 		</nav>
 	</div>
 
