--- a/2.html
+++ b/2.html
@@ -34,71 +34,48 @@
 <body>
 
 	<div class="page">
-		<header class="row">
-			<div class="col">
-				<a href="/" class="pic"><img src="img/me.png" alt="Me" /></a>
-			</div>
+		<nav>
+			<a href="/">&larr; Home</a>
+		</nav>
+		<header>
 			<h1 class="col"><a href="https://www.wgu.edu" target="_blank"><abbr>WGU</abbr><i>&nearr;</i></a></h1>
 		</header>
-		<div class="row">
-			<div class="col">
-				<h5>Project</h5>
-				<h3><a href="https://apps.apple.com/us/app/mywgu-mobile/id1017785894" target="_blank"><abbr>WGU</abbr> Mobile App<i>&nearr;</i></a></h3>
-			</div>
-			<div class="col">
-				<p><abbr>WGU</abbr> is an online university that practices compentency-based learning. Competency-based learning measures skills and learning rather than time spent in a classroom.</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col">
-				<h5>Role</h5>
-				<h3>Sr. <abbr>UX</abbr> Designer</h3>
-			</div>
-			<div class="col">
-				<p><abbr>WGU</abbr> hired me to help them design their mobile products. At the time, there mobile app was basically a notication center for test grades. When I started on this project, it was just me and one iOS engineer. I played the role of product manager and designer for about the first ~9 months. I set the the direction and vision for the app, worked with the stakeholders to outline a roadmap of what our first release might look like.</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col">
-				<h3>The problem</h3>
-			</div>
-			<div class="col">
-				<p>Students really had no way of studying, and making progress except at a desktop computer. <abbr>WGU</abbr> students tend to be working adults with families, and their programs are setup so students can work at their own pace. So giving them access to the curriculum, assignments, track progress, and have access to their mentors anywhere, anytime, on any device was really important to helping them make progress in their education.</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col">
-				<h3>Process</h3>
-			</div>
-			<div class="col">
-				<p>I conducted research with students, <a href="https://www.jpattonassociates.com/story-mapping/" target="_blank">story mapped</a> and prototyped with engineers and collaborated with other designers. Something unique about this project and process was at higher education institutions, stakeholders included business and academic leadership. </p>
-			</div>
-		</div>
+		<h3>About <abbr>WGU</abbr></h3>
+		<p><abbr>WGU</abbr> is an online university that practices compentency-based learning. Competency-based learning measures skills and learning rather than time spent in a classroom.</p>
+		<h3>Roles &amp; Responsibilities</h3>
+		<ol>
+			<li>Sr. <abbr>UX</abbr> Designer</li>
+			<li>Product Manager</li>
+			<li>Research</li>
+			<li>Prototyping</li>
+			<li>Worked closely with executive and academic stakeholders</li>
+			<li>Worked across teams and product areas to create a holistic user-experience</li>
+		</ol>
+		<p>I played the role of product manager and designer for about the first ~9 months. I set the the direction and vision for the app, worked with the stakeholders to outline a roadmap of what our first release would look like.</p>
+		<h3>Customer Problem</h3>
+		<p>Students really had no way of studying, and making progress except at a desktop computer. <abbr>WGU</abbr> students tend to be working adults with families, and their programs are setup so students can work at their own pace. So giving them access to the curriculum, assignments, track progress, and have access to their mentors anywhere, anytime, on any device was really important to helping them make progress in their education.</p>
+		<h3>Design &amp; Process</h3>
+		<p>I conducted research with students, <a href="https://www.jpattonassociates.com/story-mapping/" target="_blank">story mapped</a> and prototyped with engineers and collaborated with other designers. Something unique about this project and process was at higher education institutions, stakeholders included business and academic leadership.</p>
 		<figure>
 			<img src="img/wgu-3.jpg" alt="Portfolio" />
 			<figcaption>Sticky notes and whiteboards. Is it even design without them?</figcaption>
 		</figure>
-		<div class="solo-col">
-			<p>One of the funnest parts of this project was talking with student and understanding where and how they learned. In the <abbr>WGU</abbr> office building, there was a testing center on the ground floor. I would hangout down there and as students finished their tests, I asked if they would like to participate in some user research. The ones that had the time, and agreed, I conducted interviews and tested prototypes and information architecture ideas. I also worked with educators and asked how might we bake into the experience ways to help students learn better.</p>
-		</div>
-		<figure class="white-jpg">
-			<img src="img/wgu-4.jpg" alt="Portfolio" />
+		<figure class="screen">
+			<img src="img/wgu-4.jpg" alt="Portfolio" class="blend" />
 			<figcaption>Notifications, courses, mentors, and more. All the things students wanted to make progress towards their degree.</figcaption>
 		</figure>
 		<figure>
 			<img src="img/wgu-1.png" alt="Portfolio" />
 			<figcaption>Study time.</figcaption>
 		</figure>
-		<figure>
+		<figure class="research">
 			<img src="img/wgu-2.png" alt="Portfolio" />
 			<figcaption>App store <a href="https://apps.apple.com/us/app/mywgu-mobile/id1017785894" target="_blank">reviews<i>&nearr;</i></a>.</figcaption>
 		</figure>
-		<div class="solo-col">
-			<p>By the time I ended up leaving <abbr>WGU</abbr>, the team had grown to include a product manager, and on and off shore engineering teams for both iOS and Android devices.</p>
-		</div>
+		<p>By the time I ended up leaving <abbr>WGU</abbr>, the team had grown to include a product manager, and on and off shore engineering teams for both iOS and Android devices.</p>
 		<nav>
-			<div class="prev"><a class="prev" href="3.html">&larr; <abbr>TCS</abbr></a> <code>:Use Case</code></div>
-			<div class="next"><code> Use Case:</code> <a class="next" href="1.html"><abbr>H&amp;R</abbr> Block &rarr;</a></div>
+			<div class="prev"><a class="prev" href="3.html">&larr; <abbr>TCS</abbr></a></div>
+			<div class="next"><a class="next" href="1.html"><abbr>H&amp;R</abbr> Block &rarr;</a></div>
 		</nav>
 	</div>
 
