--- a/3.html
+++ b/3.html
@@ -35,42 +35,27 @@
 <body>
 
 	<div class="page">
-		<header class="row">
-			<div class="col">
-				<a href="/" class="pic"><img src="img/me.png" alt="Me" /></a>
-			</div>
+		<figure class="hero">
+			<img src="img/tcs-1.png" alt="Portfolio" />
+		</figure>
+		<nav>
+			<a href="/">&larr; Home</a>
+		</nav>
+		<header>
 			<h1 class="col"><a href="https://www.tcs.com/banking-financial-services" target="_blank"><abbr>TCS</abbr><i>&nearr;</i></a></h1>
 		</header>
-		<div class="row">
-			<div class="col">
-				<h5>Projects</h5>
-				<h3>Too many to count</h3>
-			</div>
-			<div class="col">
-				<p><abbr>TCS</abbr> is a giant company. According to their website, <abbr>TCS</abbr> employs 509,058 employees, which represent 155 nationalities across 46 countries. So having an impact on a product and organization that large was very difficult.</p>
-				<p>I worked in the financial services division and worked on products for banking, insurance, capital markets, corporate governance, and more.</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col">
-				<h5>Role</h5>
-				<h3><abbr>UI</abbr> &amp; <abbr>UX</abbr> Designer</h3>
-			</div>
-			<div class="col">
-				<p>I would like to say I practiced <abbr>UX</abbr> design there, but in reality I was doing a lot of <abbr>UI</abbr>, interaction, and visual design.</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col">
-				<h3>Process</h3>
-			</div>
-			<div class="col">
-				<p>I learned how to use design tools to speed up my work. I saw a lot of the sales process and how enterprise software is sold.</p>
-				<p>I facilitated a lot of design thinking workshops with clients and guided them through design decisions and our design process.</p>
-				<p>I worked with off-shore product teams and engineering teams and worked on projects that cost millions of dollars and spanned multiple years.</p>
-				<p>A sample of a few, of the many, different <abbr>UI</abbr>s and products I worked while at <abbr>TCS</abbr>.</p>
-			</div>
-		</div>
+		<h3>About <abbr>TCS</abbr></h3>
+		<p><abbr>TCS</abbr> is a giant company. According to their website, <abbr>TCS</abbr> employs 509,058 employees, which represent 155 nationalities across 46 countries. So having an impact on a product and organization that large was very difficult.</p>
+		<h3>Roles &amp; Responsibilities</h3>
+		<ol>
+			<li><abbr>UI</abbr> &amp; <abbr>UX</abbr> Designer</li>
+			<li>I worked in the financial services division and worked on products for banking, insurance, capital markets, corporate governance, and more.</li>
+			<li>I learned how to use design tools to speed up my work. I saw a lot of the sales process and how enterprise software is sold.</li>
+			<li>I facilitated a lot of design thinking workshops with clients and guided them through design decisions and our design process.</li>
+			<li>I worked with off-shore product teams and engineering teams and worked on projects that cost millions of dollars and spanned multiple years.</li>
+		</ol>
+		<h3>Design Samples</h3>
+		<p>A sample of a few, of the many, different <abbr>UI</abbr>s and products I worked while at <abbr>TCS</abbr>.</p>
 		<figure class="screen">
 			<img src="img/tcs-7.png" alt="Portfolio" />
 			<figcaption>Mobile online banking.</figcaption>
@@ -79,21 +64,21 @@
 			<img src="img/tcs-2.jpg" alt="Portfolio" />
 			<figcaption>Banking everywhere.</figcaption>
 		</figure>
-		<figure class="screen">
+		<figure class="research">
 			<img src="img/tcs-3.png" alt="Portfolio" />
 			<figcaption>Financial transactions on blockchain.</figcaption>
 		</figure>
-		<figure class="screen">
+		<figure class="research">
 			<img src="img/tcs-4.png" alt="Portfolio" />
 			<figcaption>Financial transactions on blockchain.</figcaption>
 		</figure>
-		<figure class="screen">
-			<img src="img/tcs-1.gif" alt="Portfolio" />
+		<figure>
+			<img src="img/tcs-1.png" alt="Portfolio" />
 			<figcaption>Lots of <abbr>UI</abbr> design and design systems.</figcaption>
 		</figure>
 		<nav>
 			<div class="prev"></div>
-			<div class="next"><code>Use Case:</code> <a class="next" href="2.html"><abbr>WGU</abbr> &rarr;</a></div>
+			<div class="next"><a class="next" href="2.html"><abbr>WGU</abbr> &rarr;</a></div>
 		</nav>
 	</div>
 
