--- a/6.html
+++ b/6.html
@@ -34,56 +34,63 @@
 <body>
 
 	<div class="page">
-		<header class="row">
-			<div class="col">
-				<a href="/" class="pic"><img src="img/me.png" alt="Me" /></a>
-			</div>
-			<h1 class="col"><a href="https://housecallpro.com" target="_blank">Housecall Pro<i>&nearr;</i></a></h1>
-		</header>
-		<div class="row">
-			<div class="col">
-				<h5>Project</h5>
-				<h3>Onboarding</h3>
-			</div>
-			<div class="col">
-				<p>Our goal was to improve the Pros first time experience with Housecall Pro. Our key results were activation and engagement metrics.</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col">
-				<h5>Role</h5>
-				<h3>Lead Designer</h3>
-			</div>
-			<div class="col">
-				<ol>
-					<li>More coming&hellip;</li>
-				</ol>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col">
-				<h3>The problem</h3>
-			</div>
-			<div class="col">
-				<p>In one word&hellip; churn. Housecall Pro had grown in users and features. We needed to design a way to get pros into the product and get them started with what was most important to them first and continue their journey with Housecall Pro.</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col"><h3>Process</h3></div>
-			<div class="col">
-				<p>More coming&hellip;</p>
-			</div>
-		</div>
-		<figure class="screen">
-			<img src="img/cci0.jpg" alt="Portfolio" />
-			<figcaption>Story mapping</figcaption>
-		</figure>
-        <figure class="screen">
-			<img src="img/hcp1.png" alt="Portfolio" />
-			<figcaption>Product homepage</figcaption>
+		<figure class="hero">
+			<img src="img/hcp-1.png" alt="Portfolio" />
 		</figure>
 		<nav>
-            <div class="prev"><code> Use Case:</code> <a class="prev" href="4.html">&larr; Mavenlink</a></div>
+			<a href="/">&larr; Home</a>
+		</nav>
+		<header>
+			<h1><a href="https://housecallpro.com" target="_blank">Housecall Pro<i>&nearr;</i></a></h1>
+		</header>
+		<h3>About Housecall Pro</h3>
+		<p>Housecall Pro (<abbr>HCP</abbr>) is a SaaS operating platform combined with modern financial services and supporting business solutions that helps home service professionals run all aspects of their business.</p>
+		<h3>Customer Problem</h3>
+		<p>Pros struggle to know where to start, how to navigate, and use the many features in <abbr>HCP</abbr>.</p>
+		<h3>Business Problem</h3>
+		<p>In one word&hellip; churn. <abbr>HCP</abbr> had grown rapidly in users (pros) and features. We needed to get pros into the product and get them started with what was most important to them and continue their journey with Housecall Pro.</p>
+		<h3>Role &amp; Responsibilities</h3>
+		<ol>
+			<li>Lead Designer</li>
+			<li>Research</li>
+			<li>Prototype</li>
+			<li>Design</li>
+			<li>Worked closely with a cross-functional team of Engineers, Designers, Marketing, PMs and executive stakeholders</li>
+			<li>Worked across teams and product areas to create a holistic user-experience</li>
+		</ol>
+		<figure class="research">
+			<img src="img/hcp4.png" alt="Portfolio" />
+			<figcaption>Observations</figcaption>
+		</figure>
+		<h3>Key takeaways</h3>
+		<p>In our initial research we talked to pros, used existing data, explored the problem, and these were our main takeaways:</p>
+		<ol>
+			<li>Everybody is a mix of explorer (&ldquo;I skip anything that looks like help&hellip; I can figure it out&rdquo;) and passenger (&ldquo;I don&rsquo;t know where or how to start&rdquo;).</li>
+			<li>Pros come with a pain point in mind, but can become interested in new features they didn&rsquo;t know were available.</li>
+			<li>Every end is a new beginning.</li>
+			<li>Having a home to come back to, to reset, seemed to be desired.</li>
+		</ol>
+		<h3>Our solution</h3>
+		<p>For our solution, we created a set of design patterns around scenarios rather than what we initially perceived as types of users, namely the explorer vs. the passenger. We observed that self-proclaimed explorers still needed guidance and assurance as they explored. Both the explorer and the passenger shared the same goals: to discover the value that <abbr>HCP</abbr> provides and to start using it.</p>
+		<p>The new onboarding strategy helps pros in adopting and engaging with features, enabling them to get the maximum value from <abbr>HCP</abbr>. These patterns include homepage onboarding, inline onboarding, micro onboarding, feature landing pages, and onboarding wizards.</p>
+		<p>I'll talk about a few specifically: homepage onboarding, inline onboarding, and feature landing pages.</p>
+        <figure>
+			<img src="img/hcp1.png" alt="Portfolio" />
+			<figcaption>Homepage onboarding</figcaption>
+		</figure>
+		<p>We wanted a homepage for onboarding. So we made the homepage the homepage for onboarding &#128516;. This is the first page you see when you signup for <abbr>HCP</abbr>. This gave pros a reset page. As pros explored and completed setup tasks, they like to reset and see progress and for those who wanted it, could receive suggested next steps.</p>
+		<figure>
+			<img src="img/hcp2.png" alt="Portfolio" />
+			<figcaption>Inline onboarding</figcaption>
+		</figure>
+		<p>Inline onboarding is a pattern that worked great for explorers and passengers. As the pros completed onboarding tasks, through exploration or guided, we added new tasks that were logical next steps to get more value from <abbr>HCP</abbr>. We called them inline, because they fell inline with the flow or path of the pro. As a task was completed we presented the opportunity to continue learning about <abbr>HCP</abbr>.</p>
+		<figure>
+			<img src="img/hcp3.png" alt="Portfolio" />
+			<figcaption>Feature landing pages</figcaption>
+		</figure>
+		<p>Feature landing pages may seem obvious, but it was a pattern we needed to establish. This pattern worked especially well for the explorer. The feature landing page explained the value of the feature and also a clear starting point. We often observed when a pro was exploring, and when landing on a feature landing page saying something like, &ldquo;mmm This is interesting. I didn&rsquo;t know you did this.&rdquo;</p>
+		<nav>
+            <div class="prev"><a class="prev" href="4.html">&larr; Mavenlink</a></div>
 		</nav>
 	</div>
 
