--- a/index.html
+++ b/index.html
@@ -32,11 +32,9 @@
 <body>
 
 	<div class="page">
-		<header class="row">
-			<div class="col">
-				<a href="/" class="pic home"><img src="img/me.png" alt="Me" /></a>
-			</div>
-			<h1 class="col">I am a product designer. I design usable interfaces and enjoyable user experiences. I am passionate about finding the truth, getting to the heart of the problem. I love seeing my designs out in the world being used by people to make their lives better. I have been in <abbr>IC</abbr>, lead, and management roles.</h1>
+		<header>
+			<a href="/" class="pic home"><img src="img/me.png" alt="Me" /></a>
+			<h1 class="col">I am a product designer. I design usable interfaces and enjoyable user experiences. I love seeing my designs out in the world being used by people. I have been in <abbr>IC</abbr>, lead, and management roles.</h1>
 		</header>
 		<!-- <section class="process row">
 			<div class="col">
@@ -48,49 +46,27 @@
 				<p>It&rsquo;s just that I have found that the three things I most consistently use and see the best results from can be generalized as: talking to customers, collaborating with the team, and prototyping and testing solutions.</p>
 			</div>
 		</section> -->
-		<section class="works row">
-			<div class="col">
-				<h5>Work</h5>
-				<h3>Recent Use Cases</h3>
-			</div>
-			<div class="col">
-				<div class="work">
-					<h3><a href="6.html">Housecall Pro (HCP)</a></h3>
-					<p>Designing for Pros and their first experiences with HCP. Set the design language and design system library for our iOS apps.</p>
-				</div>
-				<!-- <div class="work">
-					<h3><a href="5.html">CircleCI</a></h3>
-					<p>Lead designer on three product experience teams. Helping our design team be the best they can be.</p>
-				</div> -->
-				<div class="work">
-					<h3><a href="4.html">Mavenlink</a></h3>
-					<p>Lead product designer on the resource management and project management areas of our product.</p>
-				</div>
-				<div class="work">
-					<h3><a href="1.html">H&amp;R Block</a></h3>
-					<p><abbr>UX</abbr> designer on their tax-pro product. This product is used by the tax pros in their retail offices, a channel for a billion dollars in revenue.</p>
-				</div>
-				<div class="work">
-					<h3><a href="2.html"><abbr>WGU</abbr></a></h3>
-					<p>Lead design on <abbr>WGU</abbr>&rsquo;s student app. The app gave students the ability to study and monitor progress towards their degree, communicate with mentors, and other resources.</p>
-				</div>
-				<div class="work">
-					<h3><a href="3.html"><abbr>TCS</abbr></a></h3>
-					<p><abbr>UX</abbr>, <abbr>IX</abbr>, and <abbr>UI</abbr> design for financial products.</p>
-				</div>
-			</div>
-		</section>
-		<footer class="row">
-			<div class="col">
-				<h5>Find me on the www</h5>
-			</div>
-			<ul class="col">
-				<li><a href="mailto:nathanphilpot@gmail.com" target="_blank">Email</a></li>
-				<li><a href="https://www.linkedin.com/in/nathanphilpot/" target="_blank">LinkedIn<i>&nearr;</i></a></li>
-				<li><a href="https://twitter.com/nathanphilpot" target="_blank">Twitter<i>&nearr;</i></a></li>
-				<li><a href="https://dribbble.com/nathanphilpot" target="_blank">Dribbble<i>&nearr;</i></a></li>
-				<li>&#x1F44D;</li>
-			</ul>
+		<h2>Recent Work</h2>
+		<h3><a href="6.html">Housecall Pro (HCP)</a></h3>
+		<p>Lead designer on onboarding patterns and strategy and iOS design system.</p>
+		<h3><a href="4.html">Mavenlink</a></h3>
+		<p>Lead product designer on resource and project management.</p>
+		<h3><a href="1.html">H&amp;R Block</a></h3>
+		<p>Lead <abbr>UX</abbr> designer on tax-pro product, a channel for a billion dollars in revenue.</p>
+		<h3><a href="2.html"><abbr>WGU</abbr></a></h3>
+		<p>Lead design on <abbr>WGU</abbr>&rsquo;s student app.</p>
+		<h3><a href="3.html"><abbr>TCS</abbr></a></h3>
+		<p><abbr>UX</abbr>, <abbr>IX</abbr>, and <abbr>UI</abbr> design for financial products.</p>
+		<footer>
+		<h5>Find me on the www</h5>
+		<ul>
+			<li><a href="mailto:nathanphilpot@gmail.com" target="_blank">Email me</a></li>
+			<li><a href="https://www.linkedin.com/in/nathanphilpot/" target="_blank">LinkedIn<i>&nearr;</i></a></li>
+			<li><a href="https://twitter.com/nathanphilpot" target="_blank">Twitter<i>&nearr;</i></a></li>
+			<li><a href="https://dribbble.com/nathanphilpot" target="_blank">Dribbble<i>&nearr;</i></a></li>
+			<li><a href="https://github.com/nathanrp" target="_blank">Github<i>&nearr;</i></a></li>
+			<li>&#x1F44D;</li>
+		</ul>
 		</footer>
 	</div>
 
