--- a/4.html
+++ b/4.html
@@ -35,98 +35,70 @@
 <body>
 
 	<div class="page">
-		<header class="row">
-			<div class="col">
-				<a href="/" class="pic"><img src="img/me.png" alt="Me" /></a>
-			</div>
-			<div class="col">
-				<h1><a href="https://www.mavenlink.com" target="_blank">Mavenlink<i>&nearr;</i></a></h1>
-			</div>
+		<nav>
+			<a href="/">&larr; Home</a>
+		</nav>
+		<header>
+			<h1><a href="https://www.mavenlink.com" target="_blank">Mavenlink<i>&nearr;</i></a></h1>
 		</header>
-		<div class="row">
-			<div class="col">
-				<h5>Project</h5>
-				<h3>Resource Planning</h3>
-			</div>
-			<div class="col">
-				<p>Mavenlink (now Kantata) describes itself as the &ldquo;industry cloud for professional services&trade;.&rdquo; Our product helps service teams with project management and resource management.</p>
-				<p>In 2017 they wanted to be the leader in resource management for professional services. Mavenlink felt that no one else was doing what they wanted to do. This would be key to their future growth and market differentiation. In 2017 I started work on resource management in Mavenlink. I was asked to be the lead designer on this effort. This work would eventually be released in January of 2018.</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col">
-				<h5>Role</h5>
-				<h3>Lead Designer</h3>
-			</div>
-			<div class="col">
-				<ol>
-					<li>Responsible for conducting research (over 50 interviews)</li>
-					<li>Shared reasons behind decisions and design directions with stakeholders and leadership</li>
-					<li>Prototyped and tested designs</li>
-					<li><abbr>UI</abbr> and interaction design</li>
-					<li>Worked closely with engineering in building of the <abbr>UI</abbr></li>
-				</ol>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col">
-				<h3>The problem</h3>
-			</div>
-			<div class="col">
-				<p>For resource planners setting delivery teams up to succeed is critical. With things always changing we needed to give them the ability to plan ahead and maintain a healthy workforce. Deeper than that for resource planners we wanted to give them the confidence to be able contribute strategically to their organization and help those they allocate better enjoy their work and grow their careers.</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col"><h3>Process</h3></div>
-			<div class="col">
-				<p>We started by talking to resource managers. The resource manager&rsquo;s responsibilites include balancing work (demand) and resources (supply). A lot of their time is negotiating with project managers, people managers, and helping people do work they want to do and grow their careers. Depending on the size of the company the person who performs these responsibilites can be hard to define.</p>
-			</div>
-		</div>
-		<figure>
-			<img src="img/ml-4.jpg" alt="Portfolio" />
+		<h3>About Mavenlink</h3>
+		<p>Mavenlink (now Kantata) describes itself as the &ldquo;industry cloud for professional services&trade;.&rdquo; Our product helps service teams with project management and resource management.</p>
+		<h3>Customer Problem</h3>
+		<p>For resource planners setting delivery teams up to succeed is critical. With things always changing we needed to give them the ability to plan ahead and maintain a healthy workforce. Deeper than that for resource planners we wanted to give them the confidence to be able contribute strategically to their organization and help those they allocate better enjoy their work and grow their careers.</p>
+		<h3>Business Problem</h3>
+		<p>In 2017 Mavenlink wanted to be the leader in resource management for professional services. They felt that no one else was doing what they wanted to do. This would be key to their future growth and market differentiation. In 2017 I started work on resource management in Mavenlink. I was asked to be the lead designer on this effort. This work would eventually be released in January of 2018.</p>
+		<h3>Role &amp; Responsibilities</h3>
+		<ol>
+			<li>Lead Designer</li>
+			<li>Responsible for conducting research (over 50 interviews)</li>
+			<li>Shared reasons behind decisions and design directions with stakeholders and leadership</li>
+			<li>Prototyped and tested designs</li>
+			<li><abbr>UI</abbr> and interaction design</li>
+			<li>Worked closely with engineering in building of the <abbr>UI</abbr></li>
+		</ol>
+		<h3>Process &amp; Solution</h3>
+		<p>We started by talking to resource managers. The resource manager&rsquo;s responsibilites include balancing work (demand) and resources (supply). A lot of their time is negotiating with project managers, people managers, and helping people do work they want to do and grow their careers. Depending on the size of the company the person who performs these responsibilites can be hard to define.</p>
+		<figure class="research">
+			<img src="img/ml-4.png" alt="Portfolio" />
 			<figcaption>Not actual participants. To protect the privacy of research participants I am using photos by <a href="https://unsplash.com/@visuals?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">visuals</a>, <a href="https://unsplash.com/@windows?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Windows</a>, <a href="https://unsplash.com/@kaleidico?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Kaleidico</a> on <a href="https://unsplash.com/photos/6G6akT8biLg?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>.
 			</figcaption>
 		</figure>
-		<div class="solo-col">
-			<p>As we learned about resource managers I would share these findings and talk about themes and design directions we were exploring.</p>
-		</div>
+		<p>As we learned about resource managers I would share these findings and talk about themes and design directions we were exploring.</p>
 		<figure class="screen">
 			<img src="img/ml-photo-2.png" alt="Portfolio" />
 			<figcaption>Synthesized research learnings.</figcaption>
 		</figure>
-		<figure>
+		<figure class="research">
 			<img src="img/ml-photo-3.jpg" alt="Portfolio" />
 			<figcaption>Story mapping</figcaption>
 		</figure>
-		<figure>
+		<figure class="research">
 			<img src="img/ml-photo-1.jpg" alt="Portfolio" />
 			<figcaption>Collaborative design explorations and solutioning exercises with engineering and product stakeholders.</figcaption>
 		</figure>
-		<div class="solo-col">
-			<p>At this point we made sure to include engineering to allow them time to think about and estimate how we might build this. We also starting prototyping these ideas and shared them internally.</p>
-		</div>
+		<p>At this point we made sure to include engineering to allow them time to think about and estimate how we might build this. We also starting prototyping these ideas and shared them internally.</p>
 		<figure class="screen">
 			<img src="img/ml-2b.png" alt="Portfolio" />
 			<figcaption>Prototyping</figcaption>
 		</figure>
-		<div class="solo-col">
-			<p>We took the designs back to our customers to further validate and test. This is where we did the most iteration. We would show a design to a few customers, listen to feedback, make changes and test again.</p>
-			<p>We learned a lot about trade-offs. No one service business does things the same. But we did find basic principles that they all had to follow to run a profitable business and built in a lot of flexibility. One simple example is how to display allocations. It was about split 50/50 on those who liked seeing allocations in percentages or hours per week. So we ended up displaying both.</p>
-		</div>
-		<figure>
+		<p>We took the designs back to our customers to further validate and test. This is where we did the most iteration. We would show a design to a few customers, listen to feedback, make changes and test again.</p>
+		<p>We learned a lot about trade-offs. No one service business does things the same. But we did find basic principles that they all had to follow to run a profitable business and built in a lot of flexibility. One simple example is how to display allocations. It was about split 50/50 on those who liked seeing allocations in percentages or hours per week. So we ended up displaying both.</p>
+		<figure class="research">
 			<img src="img/ml-3.png" alt="Portfolio" />
 			<figcaption>Prototype testing</figcaption>
 		</figure>
-		<div class="solo-col">
-			<p>As we refined the prototype and learned what was essential we started to set a scope and estimate with engineering for a version one we could release by January 2018. We also got to a point in our prototyping that we felt we weren&rsquo;t learning big new things and had the confidence in our design. We started building. This too was a collaborative process. As we built with engineering we continued to learn new things and iterate on the design.</p>
-		</div>
-		<figure class="screen">
+		<p>As we refined the prototype and learned what was essential we started to set a scope and estimate with engineering for a version one we could release by January 2018. We also got to a point in our prototyping that we felt we weren&rsquo;t learning big new things and had the confidence in our design. We started building. This too was a collaborative process. As we built with engineering we continued to learn new things and iterate on the design.</p>
+		<figure>
 			<img src="img/ml-6.png" alt="Portfolio" />
 			<figcaption>Resource planning in Mavenlink.</figcaption>
 		</figure>
-		<div class="solo-col">
-			<p>My most important partner in this process was the product manager I worked with. Also the engineering team did an amazing job of building a front-end <abbr>UI</abbr> that was responsive and allowed the users to feel they could see the immediate, visible results of their actions.</p>
-		</div>
+		<p>My most important partner in this process was the product manager I worked with. Also the engineering team did an amazing job of building a front-end <abbr>UI</abbr> that was responsive and allowed the users to feel they could see the immediate, visible results of their actions.</p>
+		<h3>More</h3>
+		<p>Other projects and explorations. Worked on a project kanban board. Explored new ideas on an <abbr>IC</abbr> experience.</p>
+		<figure>
+			<img src="img/ml-7.jpg" alt="Portfolio" />
+			<figcaption>Kanban board</figcaption>
+		</figure>
 		<figure>
 			<img src="img/ml-1.gif" alt="Portfolio" />
 			<figcaption>Design exploration. Around the same time we were exploring a new design systems.</figcaption>
@@ -135,29 +107,17 @@
 			<img src="img/ml-5.gif" alt="Portfolio" />
 			<figcaption>Mobile concept</figcaption>
 		</figure>
-		<div class="row">
-			<div class="col">
-				<h3>More</h3>
-			</div>
-			<div class="col">
-				<p>Other projects and explorations. Worked on a project kanban board. Explored new ideas on an <abbr>IC</abbr> experience.</p>
-			</div>
-		</div>
-		<figure class="screen">
-			<img src="img/ml-7.jpg" alt="Portfolio" />
-			<figcaption>Kanban board</figcaption>
-		</figure>
-		<figure class="screen">
+		<figure>
 			<img src="img/ml-8.jpg" alt="Portfolio" />
 			<figcaption>Work to do</figcaption>
 		</figure>
-		<figure class="screen">
+		<figure>
 			<img src="img/ml-9.jpg" alt="Portfolio" />
 			<figcaption>Time tracking and work to do</figcaption>
 		</figure>
 		<nav>
-			<div class="prev"><a class="prev" href="1.html">&larr; <abbr>H&amp;R</abbr> Block</a> <code>:Use Case</code></div>
-			<div class="next"><code> Use Case:</code> <a class="next" href="6.html">Housecall Pro &rarr;</a></div>
+			<div class="prev"><a class="prev" href="1.html">&larr; <abbr>H&amp;R</abbr> Block</a></div>
+			<div class="next"><a class="next" href="6.html">Housecall Pro &rarr;</a></div>
 		</nav>	
 	</div>
 
