--- a/6.html
+++ b/6.html
@@ -88,7 +88,7 @@
 			<img src="img/hcp3.png" alt="Portfolio" />
 			<figcaption>Feature landing pages</figcaption>
 		</figure>
-		<p>Feature landing pages may seem obvious, but it was a pattern we needed to establish. This pattern worked especially well for the explorer. The feature landing page explained the value of the feature and also a clear starting point. We often observed when a pro was exploring, and when landing on a feature landing page saying something like, &ldquo;mmm This is interesting. I didn&rsquo;t know you did this.&rdquo;</p>
+		<p>Feature landing pages may seem obvious, but it was a pattern we needed to establish. This pattern worked especially well for the explorer. The feature landing page explained the value of the feature and also a clear starting point. We often observed when a pro was exploring, and when landing on a feature landing page saying something like, &ldquo;&hellip;mmm, This is interesting. I didn&rsquo;t know you did this.&rdquo;</p>
 		<nav>
             <div class="prev"><a class="prev" href="4.html">&larr; Mavenlink</a></div>
 		</nav>
