--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div class="page">
 		<header>
 			<a href="/" class="pic home"><img src="img/me.png" alt="Me" /></a>
-			<h1>I design usable interfaces and enjoyable user experiences. Seeing my designs out in the world being used by people is what motivates me. I have been in <abbr>IC</abbr>, lead, and management roles.</h1>
+			<h1>I design usable interfaces and enjoyable user experiences. I have been in <abbr>IC</abbr>, lead, and management design roles.</h1>
 		</header>
 		<!-- <section class="process row">
 			<div class="col">
